snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.9-win__src__bin__fstdisambiguate.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.9-win/src/bin/fstdisambiguate.cc",
    ),
    start_line: 1,
    end_line: 17,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "main",
            ),
            start_line: 17,
            end_line: 17,
            kind: Function,
            spaces: [],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 2,
                    closure_nargs: 0,
                    fn_nargs_sum: 2,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 2,
                    closure_nargs_min: 0,
                    fn_nargs_max: 2,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 1,
                    exit_sum: 1,
                    total_space_functions: 1,
                    exit_min: 1,
                    exit_max: 1,
                },
                cognitive: Stats {
                    structural: 0,
                    structural_sum: 0,
                    structural_min: 0,
                    structural_max: 0,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 1.0,
                    cyclomatic: 1.0,
                    n: 1,
                    cyclomatic_max: 1.0,
                    cyclomatic_min: 1.0,
                },
                halstead: Stats {
                    u_operators: 7,
                    operators: 12,
                    u_operands: 4,
                    operands: 6,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 16,
                        end: 16,
                        unit: false,
                        sloc_min: 1,
                        sloc_max: 1,
                    },
                    ploc: Ploc {
                        lines: {
                            16,
                        },
                        ploc_min: 1,
                        ploc_max: 1,
                    },
                    cloc: Cloc {
                        only_comment_lines: 0,
                        code_comment_lines: 0,
                        comment_line_end: None,
                        cloc_min: 0,
                        cloc_max: 0,
                    },
                    lloc: Lloc {
                        logical_lines: 1,
                        lloc_min: 1,
                        lloc_max: 1,
                    },
                    space_count: 1,
                    blank_min: 0,
                    blank_max: 0,
                },
                nom: Stats {
                    functions: 1,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 1,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 1,
                },
                mi: Stats {
                    halstead_length: 18.0,
                    halstead_vocabulary: 11.0,
                    halstead_volume: 62.26976913547135,
                    cyclomatic: 1.0,
                    sloc: 1.0,
                    comments_percentage: 0.0,
                },
                abc: Stats {
                    assignments: 0.0,
                    assignments_sum: 0.0,
                    assignments_min: 0.0,
                    assignments_max: 0.0,
                    branches: 0.0,
                    branches_sum: 0.0,
                    branches_min: 0.0,
                    branches_max: 0.0,
                    conditions: 0.0,
                    conditions_sum: 0.0,
                    conditions_min: 0.0,
                    conditions_max: 0.0,
                    space_count: 1,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.0,
                    class_wmc: 0.0,
                    interface_wmc: 0.0,
                    class_wmc_sum: 0.0,
                    interface_wmc_sum: 0.0,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: false,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: false,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 2,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 2,
            closure_nargs_max: 0,
            total_functions: 1,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 1,
            total_space_functions: 1,
            exit_min: 0,
            exit_max: 1,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 0,
            structural_min: 0,
            structural_max: 0,
            nesting: 0,
            total_space_functions: 1,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 2.0,
            cyclomatic: 1.0,
            n: 2,
            cyclomatic_max: 1.0,
            cyclomatic_min: 1.0,
        },
        halstead: Stats {
            u_operators: 8,
            operators: 38,
            u_operands: 20,
            operands: 26,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 17,
                unit: true,
                sloc_min: 1,
                sloc_max: 1,
            },
            ploc: Ploc {
                lines: {
                    16,
                    10,
                    7,
                    4,
                    14,
                    11,
                    8,
                    5,
                    12,
                    9,
                    3,
                },
                ploc_min: 1,
                ploc_max: 1,
            },
            cloc: Cloc {
                only_comment_lines: 2,
                code_comment_lines: 0,
                comment_line_end: Some(
                    1,
                ),
                cloc_min: 0,
                cloc_max: 0,
            },
            lloc: Lloc {
                logical_lines: 6,
                lloc_min: 1,
                lloc_max: 1,
            },
            space_count: 2,
            blank_min: 0,
            blank_max: 0,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 1,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 0,
            space_count: 2,
        },
        mi: Stats {
            halstead_length: 64.0,
            halstead_vocabulary: 28.0,
            halstead_volume: 307.67071501168664,
            cyclomatic: 2.0,
            sloc: 17.0,
            comments_percentage: 0.11764705882352941,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 2,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
