snapshots/test__act_on_file@.__tests__repositories__DeepSpeech__native_client__ctcdecode__third_party__openfst-1.6.9-win__src__bin__fstdraw-main.cc.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: Some(
        "./tests/repositories/DeepSpeech/native_client/ctcdecode/third_party/openfst-1.6.9-win/src/bin/fstdraw-main.cc",
    ),
    start_line: 1,
    end_line: 104,
    kind: Unit,
    spaces: [],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 0,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 0,
            closure_nargs_max: 0,
            total_functions: 0,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 7,
            exit_sum: 7,
            total_space_functions: 0,
            exit_min: 7,
            exit_max: 7,
        },
        cognitive: Stats {
            structural: 22,
            structural_sum: 22,
            structural_min: 22,
            structural_max: 22,
            nesting: 0,
            total_space_functions: 0,
            boolean_seq: BoolSequence {
                boolean_op: Some(
                    349,
                ),
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 23.0,
            cyclomatic: 23.0,
            n: 1,
            cyclomatic_max: 23.0,
            cyclomatic_min: 23.0,
        },
        halstead: Stats {
            u_operators: 24,
            operators: 272,
            u_operands: 91,
            operands: 192,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 104,
                unit: true,
                sloc_min: 104,
                sloc_max: 104,
            },
            ploc: Ploc {
                lines: {
                    61,
                    49,
                    37,
                    98,
                    31,
                    92,
                    25,
                    86,
                    19,
                    80,
                    13,
                    74,
                    7,
                    68,
                    62,
                    56,
                    44,
                    38,
                    99,
                    32,
                    93,
                    26,
                    20,
                    14,
                    8,
                    63,
                    57,
                    51,
                    45,
                    100,
                    94,
                    27,
                    88,
                    21,
                    82,
                    76,
                    9,
                    70,
                    64,
                    58,
                    46,
                    40,
                    34,
                    28,
                    89,
                    22,
                    83,
                    16,
                    77,
                    10,
                    71,
                    65,
                    59,
                    53,
                    47,
                    41,
                    102,
                    35,
                    96,
                    29,
                    90,
                    23,
                    84,
                    17,
                    78,
                    72,
                    5,
                    66,
                    60,
                    54,
                    48,
                    42,
                    103,
                    36,
                    97,
                    30,
                    24,
                    85,
                    18,
                    79,
                    12,
                    73,
                },
                ploc_min: 82,
                ploc_max: 82,
            },
            cloc: Cloc {
                only_comment_lines: 4,
                code_comment_lines: 0,
                comment_line_end: Some(
                    3,
                ),
                cloc_min: 4,
                cloc_max: 4,
            },
            lloc: Lloc {
                logical_lines: 61,
                lloc_min: 61,
                lloc_max: 61,
            },
            space_count: 1,
            blank_min: 18,
            blank_max: 18,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 0,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 0,
            closures_min: 0,
            closures_max: 0,
            space_count: 1,
        },
        mi: Stats {
            halstead_length: 464.0,
            halstead_vocabulary: 115.0,
            halstead_volume: 3176.30738363819,
            cyclomatic: 23.0,
            sloc: 104.0,
            comments_percentage: 0.038461538461538464,
        },
        abc: Stats {
            assignments: 0.0,
            assignments_sum: 0.0,
            assignments_min: 0.0,
            assignments_max: 0.0,
            branches: 0.0,
            branches_sum: 0.0,
            branches_min: 0.0,
            branches_max: 0.0,
            conditions: 0.0,
            conditions_sum: 0.0,
            conditions_min: 0.0,
            conditions_max: 0.0,
            space_count: 1,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.0,
            class_wmc: 0.0,
            interface_wmc: 0.0,
            class_wmc_sum: 0.0,
            interface_wmc_sum: 0.0,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: false,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: false,
        },
    },
}
